# regru-api-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
regru_cli/: __init__.py  __main__.py  cli.py  client.py  config.py
src/regru_api_cli/: __init__.py  __main__.py  cli.py  client.py  config.py
src/regru_api_cli/commands/: config.py  servers.py  services.py
