[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "regru-api-cli"
version = "0.1.0"
description = "Command-line interface for the REG.RU API"
readme = "README.md"
authors = [{ name = "REG.RU CLI Maintainers" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "pre-commit>=3.7",
    "ruff>=0.4",
]

[project.scripts]
regru-cli = "regru_api_cli.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"